refactor for personas

--- a/ui/src/app/content/home/home.component.html
+++ b/ui/src/app/content/home/home.component.html
@@ -88,7 +88,7 @@
       </ol>
 
       <!-- Posts-->
-      <app-userlist></app-userlist>
+      <app-personalist></app-personalist>
       <br />
 
       <!-- /.container-fluid -->
